# homeassistant-plum-ecomax

./: .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  hacs.yml  hassfest.yml
.qlty/: qlty.toml
custom_components/: __init__.py
custom_components/plum_ecomax/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  connection.py  const.py  diagnostics.py  entity.py  icons.json  logbook.py  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  strings.json  strings.sensor.json  switch.py  system_health.py  water_heater.py
custom_components/plum_ecomax/translations/: cs.json  cz.json  en.json  fr.json  pl.json  ru.json  sensor.en.json  sensor.fr.json  sensor.pl.json  sensor.ru.json  sensor.ua.json  ua.json
tests/: __init__.py  common.py  conftest.py  const.py  test_binary_sensor.py  test_button.py  test_climate.py  test_config_flow.py  test_connection.py  test_diagnostics.py  test_entity.py  test_init.py  test_logbook.py  test_number.py  test_select.py  test_sensor.py  test_services.py  test_switch.py  test_system_health.py  test_water_heater.py
tests/fixtures/: regdata__ecomax_860p3_o.json  regdata__ecomax_860p3_s_lite.json  regdata__ecomax_860p6_o.json
tests/plum_ecomax/: test_config_flow.py  test_device_action.py  test_device_trigger.py
